# _google_identity_testing

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
main/app/: common.py  dependencies.py  models.py  schemas.py  urls.py  views.py
main/app/migrations/: 0001_initial.py
main/app/templates/app/: login.html
main/main/: config.py  settings.py
