[tool.poetry]
name = "gen_python_package"
version = "0.0.1"
description = ""
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
package-mode = false

[build-system]
requires = ["poetry-core"]

[tool.poetry.dependencies]
python = "^3.11.8"
django = "^5.1.6"
djangorestframework = "^3.15.2"
psycopg = "^3.2.4"
firebase-admin = "^6.6.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.9.6"
isort = "^5.13.1"
pre-commit = "^4.1.0"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
select = ["B", "C", "E", "F", "I", "W"]
ignore = ["E722", "B904", "B006", "B008"]
